After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 622069 - greeter doesn't work when there's no local user
greeter doesn't work when there's no local user
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
2.30.x
Other Linux
: Normal critical
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2010-06-19 12:30 UTC by Vincent Untz
Modified: 2010-06-22 02:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to show the input box when there's no local user (3.88 KB, patch)
2010-06-22 00:42 UTC, Vincent Untz
none Details | Review

Description Vincent Untz 2010-06-19 12:30:19 UTC
This is https://bugzilla.novell.com/show_bug.cgi?id=615044

===============
my system is configured for NIS so doesn't have any local users besides root.
The gdm greeter in this case only shows a lone 'login' button and the waiting
curser but is empty otherwise. Ie there is no way to enter a user name.
Pressing the login button leads to X restart.

Simply adding one local user makes the button to manually enter a user name
show up.
===============

My guess is that commits 5f8723c4fccff6aed79edbe635e3e16fa74a42d1 and 6ef14933e32173235eaafb0bc9d7188accce3364 introduced this bug.
Comment 1 Vincent Untz 2010-06-22 00:42:13 UTC
Created attachment 164268 [details] [review]
Patch to show the input box when there's no local user

Here's the patch I came to when fixing this. It seems to work good when testing here.

(note: it's done against 2.30.2, I didn't check yet if it applies to gnome-2-30 or master)
Comment 2 Vincent Untz 2010-06-22 01:20:44 UTC
Review of attachment 164268 [details] [review]:

::: gdm-2.30.2.orig/gui/simple-greeter/gdm-greeter-login-window.c
@@ +911,3 @@
+        if (user_chooser_has_no_user (login_window)) {
+                /* There's no face browser to show */
+                login_window->priv->show_cancel_button = FALSE;

We might want to move this to switch_mode(), in the MODE_AUTHENTICATION case. I didn't test it, but it probably makes sense.
Comment 3 William Jon McCann 2010-06-22 02:40:07 UTC
Review of attachment 164268 [details] [review]:

Looks good.  I'm going to push it with the one change.

::: gdm-2.30.2.orig/gui/simple-greeter/gdm-chooser-widget.c
@@ +1919,2 @@
 }
 

I think maybe this should go in gdm_chooser_widget_loaded instead.
Comment 4 William Jon McCann 2010-06-22 02:45:12 UTC
Pushed.  Thanks.