show the username input box when there's no local user

When a system is configured for NIS so doesn't have any local users besides root,
the greeter only shows a lone 'login' button and the waiting
cursor but is empty otherwise. Ie there is no way to enter a user name.
Pressing the login button leads to X restart.

My guess is that commits 5f8723c4fccff6aed79edbe635e3e16fa74a42d1 and
6ef14933e32173235eaafb0bc9d7188accce3364 introduced this bug.

https://bugzilla.gnome.org/show_bug.cgi?id=622069